[project]
name = "bloasis"
version = "0.1.0"
description = "BLOASIS — CLI-based deterministic + ML trading research and execution"
requires-python = ">=3.11"

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Config / Validation
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",

    # Database
    "sqlalchemy>=2.0.25",
]

# Heavier dependencies are split into extras so the base package installs
# cleanly without TA-Lib system libraries. Subsequent PRs activate them.
#   pip install bloasis[data]     # PR2 — yfinance, pandas, finnhub, httpx, aiolimiter
#   pip install bloasis[ta]       # PR3 — TA-Lib (requires system libta-lib)
#   pip install bloasis[llm]      # PR2 — provider-agnostic LLM via LiteLLM
#   pip install bloasis[ml]       # PR3+ — lightgbm, shap, scikit-learn
#   pip install bloasis[broker]   # PR6  — alpaca paper/live
#   pip install bloasis[dev]      # always — test/lint/typecheck

[project.optional-dependencies]
data = [
    "yfinance==0.2.59",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "finnhub-python>=2.4.20",
    "httpx>=0.27.0",
    "aiolimiter>=1.1.0",
]
ta = [
    "TA-Lib>=0.4.32",
]
llm = [
    "litellm>=1.55.0",
]
ml = [
    "lightgbm>=4.3.0",
    "shap>=0.45.0",
    "scikit-learn>=1.4.0",
]
broker = [
    "alpaca-py>=0.25.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
bloasis = "bloasis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bloasis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=bloasis",
    "--cov-report=term-missing",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/", "build/"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "talib.*",
    "finnhub.*",
    "lightgbm.*",
    "shap.*",
    "litellm.*",
    "alpaca.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["bloasis"]
